--- a/assets/css/components/modal-search/_search-base.scss
+++ b/assets/css/components/modal-search/_search-base.scss
@@ -45,9 +45,15 @@
 		flex: 0 0 calc(100% / 2);
 		min-width: calc(100% / 2);
 		padding-bottom: $spacer;
+		display: flex;
+		align-items: flex-start;
 
 		@include media-breakpoint-up(md) {
 			padding-bottom: 10px;
+		}
+
+		.check {
+			margin-top: 5px;
 		}
 	}
 }
